Create new device and get now possible
